--- a/handpose/src/App.css
+++ b/handpose/src/App.css
@@ -4,17 +4,7 @@
   flex-direction: column;
   min-height: 100vh;
   background-color: #2a2a3b;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  cursor: default;
 }
 
 .App-header {
@@ -39,44 +29,81 @@
   color: #aeb6cf;
 }
 
-.App-link {
-  color: #5e92f3;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.App-link:hover {
-  color: #8cb6f7;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .main-container {
-  margin-top: 120px;
+  margin-top: 160px;
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  padding: 20px 0;
+  margin-bottom: 80px;
 }
 
 .camera-container {
   position: relative;
-  width: 720px;
-  height: 540px;
+  width: 640px;
+  height: 440px;
   border: 3px solid #5e92f3;
   border-radius: 12px;
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
   background-color: #1f1f2e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 40px;
 }
 
-.webcam, .canvas {
+.camera-container h2 {
+  position: absolute;
+  top: 5px;
+  font-size: 1.5rem;
+  color: #e1e1f0;
+  background-color: #3a3a54;
+  border-radius: 8px;
+  text-align: center;
+  width: 90%;
+  padding: 5px;
+  z-index: 1;
+}
+
+.projection-container {
+  position: relative;
+  width: 640px;
+  height: 440px;
+  border: 3px solid #5e92f3;
+  border-radius: 12px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
+  background-color: #3c4a61;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 40px;
+}
+
+.projection-container h2 {
+  position: absolute;
+  top: 5px;
+  font-size: 1.5rem;
+  color: #e1e1f0;
+  background-color: #3a3a54;
+  border-radius: 8px;
+  text-align: center;
+  width: 90%;
+  padding: 5px;
+  z-index: 1;
+}
+
+.webcam {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+.canvas,
+.projection-canvas {
   position: absolute;
   top: 0;
   left: 0;
@@ -93,16 +120,8 @@
   font-size: 1rem;
   text-align: center;
   margin-top: 20px;
-  box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 -4px 6px rgba(147, 168, 177, 0.4);
+  font-weight: 600;
 }
 
-.App-footer a {
-  color: #5e92f3;
-  text-decoration: none;
-  font-weight: bold;
-}
 
-.App-footer a:hover {
-  text-decoration: underline;
-  color: #8cb6f7;
-}
